# castles3

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
data/: map.json
src/: ai.cpp  collection.cpp  collection.h  combat.cpp  combat.h  game.cpp  game.h  input.cpp  input.h  main.cpp  map.cpp  map.h  ui.cpp  ui.h
src/core/: components.h  world.cpp  world.h
src/core/systems/: ai_system.cpp  ai_system.h  combat_system.cpp  combat_system.h  date_system.cpp  date_system.h  game_system.cpp  game_system.h  hall_of_fame_system.cpp  hall_of_fame_system.h  map_system.cpp  recruit_system.cpp  recruit_system.h  resource_system.cpp  resource_system.h  save_load.cpp  save_load.h  trade_system.cpp  trade_system.h  unlock_system.cpp  unlock_system.h
src/engine/: game.cpp  game.h
src/input/: input_handler.cpp  input_handler.h  nput_handler.cpp
src/military/: recruitment.cpp  recruitment.h
src/renderer/: battle_renderer.cpp  battle_renderer.h  landing_renderer.cpp  landing_renderer.h  map_renderer.cpp  map_renderer.h  panel_renderer.cpp  panel_renderer.h  topbar_renderer.cpp  topbar_renderer.h  victory_renderer.cpp  victory_renderer.h
src/ui/: combat_ui.cpp  infopanel_ui.cpp  landing_ui.cpp  panels_ui.cpp  tabbar_ui.cpp  taskrows_ui.cpp  topbar_ui.cpp  ui.cpp  ui.h  ui_helpers.cpp
tests/: test_ai.cpp  test_combat.cpp  test_date.cpp  test_game_system.cpp.cpp  test_hall_of_fame.cpp  test_map.cpp  test_recruiting.cpp  test_resource.cpp  test_smoke.cpp  test_unlock.cpp
